--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.128.0",
+    "psycopg2-binary>=2.9.11",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
 ]
 
